adjusted the images with the right width

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
             <div class="afterAndBefore">
                 <figure typeof="schema:image">
-                    <img class="markup" src="./accessory.jpg">
+                    <img class="markup noHeight" src="./accessory.jpg">
                     <figcaption>
                         Prima schita a paginii tuturor accesoriilor
                     </figcaption>
@@ -270,7 +270,7 @@
                 pentru fiecare produs pe care il ofera site-ul.
             </p>
             <figure typeof="schema:image">
-                <img class="microdate" src="microdate.jpg">
+                <img class="webMarkup" src="microdate.jpg">
                 <figcaption>
                     Exemplu microdate
                 </figcaption>
